# ml-wine-quality-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: api.py  monitoring.py  train.py
static/: index.html
tests/: test_api.py  test_model.py
