[project]
name = "wine-quality-mle"
version = "0.1.0"
description = "End-to-end ML Engineering project: wine quality prediction"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]
